fix: icon position on small screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,3 +53,10 @@ footer {
 .active {
   background-color: #999999;
 }
+@media screen and (max-width: 400px) {
+  footer {
+    img {
+      left: 15px;
+    }
+  }
+}
